--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "docstructure"]
-	path = docstructure
+	path = code/docstructure
 	url = https://github.com/techknowledgist/tgist-docstructure
 [submodule "utils"]
-	path = utils
+	path = code/utils
 	url = https://github.com/techknowledgist/tgist-utils
